syntax = "proto3";

package wres.statistics.generated;

option java_package = "wres.statistics.generated";
option java_outer_classname = "ConsumerProto";
option java_multiple_files = true;

message Consumer
{
    /*An abstraction of a consumer that consumes evaluation messages and 
      produces outputs in one or more formats.*/

    string consumer_id = 1;
    // The unique identifier of the consumer.

    enum Format
    {
        // The format generated by the consumer.
        
        PNG = 0;
        // Portable Network Graphics (PNG).

        SVG = 1;
        // Scalable Vector Graphics (SVG).

        CSV = 2;
        // Comma Separated Values (CSV).

        NETCDF = 3;
        // Network Common Data Form (NetCDF).

        PROTOBUF = 4;
        // Protocol Buffers.
        
        PAIRS = 5;
        // Pairs CSV format.
    }

    repeated Format formats = 2;
    // The formats generated by this consumer.

}